# miplatform

./: .gitignore  R11_AGENT1_GUI_HANDOFF.md  R11_AGENT2_API_HANDOFF.md  R11_AGENT3_POLICY_HANDOFF.md  R11_AGENT4_MONITORING_UI_HANDOFF.md  R11_AGENT5_QA_HANDOFF.md  R12_AGENT1_API_HANDOFF.md  R12_AGENT2_STUDIO_UX_HANDOFF.md  R12_AGENT3_ADAPTER_HANDOFF.md  R12_AGENT4_POLICY_HANDOFF.md  R12_AGENT5_QA_HANDOFF.md  R13_AGENT1_DESKTOP_SHELL_FOUNDATION_HANDOFF.md  R13_AGENT3_FILEPICKER_BATCH_WORKFLOW_HANDOFF.md  R13_AGENT4_DESKTOP_PREVIEW_BRIDGE_HANDOFF.md  R13_AGENT5_QA_HANDOFF.md  R13_AGENT_RUNNER_SERVICE_REFACTOR_HANDOFF.md  README.md  USER_MANUAL.md  pyproject.toml
docs/: CODE_STYLE.md  DECISION_LOG.md  DESKTOP_PREVIEW_BRIDGE.md  INDEX.md  ORCHESTRATOR_API.md  PROJECT_CONTEXT.md  PROJECT_RULES.md  QA_GATES.md  ROUND_HISTORY.md  ROUND_TEMPLATE.md  TECH_SPEC.md  WORKTREE_RUNBOOK.md
ops/: real_sample_baseline_tolerances.json
preview-host/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: real_sample_baseline.py  render_subagent_briefs.py  report_view.py  run_r12_qa_gates.py  run_r13_qa_gates.py  run_real_sample_e2e_regression.py  setup_round_parallel.sh
tests/: test_api_mapping.py  test_behavior_store_codegen.py  test_cli.py  test_desktop_batch_workflow.py  test_desktop_filepicker.py  test_desktop_launch_contract.py  test_desktop_preview_bridge.py  test_desktop_shell.py  test_fidelity_audit.py  test_orchestrator_api.py  test_parser.py  test_preview_manifest.py  test_preview_smoke.py  test_preview_sync.py  (+8 more)
(+85 files in other folders)
