[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miflatform-migrator"
version = "0.1.0"
description = "Parser and migration tooling for MIPLATFORM XML applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mifl-migrator = "migrator.cli:main"
mifl-migrator-api = "migrator.orchestrator_api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
