[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miflatform-migrator"
version = "0.1.0"
description = "Parser and migration tooling for MIPLATFORM XML applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
desktop = ["PySide6>=6.6"]

[project.scripts]
mifl-migrator = "migrator.cli:main"
mifl-migrator-api = "migrator.orchestrator_api:main"
mifl-migrator-desktop = "migrator.desktop.app:main"
mifl-migrator-desktop-filepicker = "migrator.desktop_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
